--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,7 +29,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: artifact.${{ matrix.bld_case }}
-        path: compile_${{ matrix.bld_case }}
+        path: compile_${{ matrix.bld_case }}.exe
 
   test:
     name: Regression tests
